# ton-service-test

./: pyproject.toml  tonconnect-manifest.json
