[tool.poetry]
name = "ton-service-test"
version = "0.1.0"
description = ""
authors = ["Aleksandr Shushlonov <sanya8923@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytonconnect = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
